website/websites/u64q/code/fibonacci.3.pyston.log

 Mon, 20 Sep 2021 15:00:16 GMT

COMMAND LINE:
 /usr/bin/pyston fibonacci.pyston-3.pyston 1000000

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "fibonacci.pyston-3.pyston", line 22
    print fib(int(sys.argv[1]))
          ^
SyntaxError: invalid syntax
